--- a/bill_master_resources.qrc
+++ b/bill_master_resources.qrc
@@ -37,5 +37,11 @@
         <file>icons/1434208652_filter.png</file>
         <file>icons/1434209948_Synchronize.png</file>
         <file>icons/1435047788_coins.png</file>
+        <file>icons/1440196879_tick_blue.png</file>
+        <file>icons/payment-icon.png</file>
+        <file>icons/1449067854_personal.png</file>
+        <file>icons/catering-icon-250.png</file>
+        <file>icons/new_printer.png</file>
+        <file>icons/if_Finance_loan_money_1889199.png</file>
     </qresource>
 </RCC>
