--- a/foods.ui
+++ b/foods.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>842</width>
+    <width>1085</width>
     <height>559</height>
    </rect>
   </property>
@@ -98,6 +98,23 @@
        </property>
        <property name="toolButtonStyle">
         <enum>Qt::ToolButtonTextBesideIcon</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="editFoodDetails">
+       <property name="minimumSize">
+        <size>
+         <width>60</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Edit Food &amp; Beverages Detaiils</string>
+       </property>
+       <property name="icon">
+        <iconset resource="bill_master_resources.qrc">
+         <normaloff>:/icons/icons/1428360743_file_edit.png</normaloff>:/icons/icons/1428360743_file_edit.png</iconset>
        </property>
       </widget>
      </item>
@@ -204,6 +221,11 @@
           </property>
           <column>
            <property name="text">
+            <string>HSN Code</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>Name</string>
            </property>
           </column>
@@ -215,6 +237,16 @@
           <column>
            <property name="text">
             <string>Category</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>SGST (%)</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>CGST (%)</string>
            </property>
           </column>
           <column>
@@ -256,7 +288,7 @@
                  </property>
                 </spacer>
                </item>
-               <item row="0" column="1">
+               <item row="0" column="2">
                 <widget class="QPushButton" name="removeOrder">
                  <property name="text">
                   <string>Remove Order</string>
@@ -264,6 +296,17 @@
                  <property name="icon">
                   <iconset resource="bill_master_resources.qrc">
                    <normaloff>:/icons/icons/1429107797_678069-sign-error-128.png</normaloff>:/icons/icons/1429107797_678069-sign-error-128.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QPushButton" name="finalizeFoods">
+                 <property name="text">
+                  <string>Finalize Foods</string>
+                 </property>
+                 <property name="icon">
+                  <iconset resource="bill_master_resources.qrc">
+                   <normaloff>:/icons/icons/1440196879_tick_blue.png</normaloff>:/icons/icons/1440196879_tick_blue.png</iconset>
                  </property>
                 </widget>
                </item>
