--- a/add_new_customer.ui
+++ b/add_new_customer.ui
@@ -142,6 +142,16 @@
      <item row="6" column="1">
       <widget class="QPlainTextEdit" name="comments"/>
      </item>
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="gst_no"/>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>GSTIN</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -177,6 +187,17 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>customer_name</tabstop>
+  <tabstop>address</tabstop>
+  <tabstop>phone</tabstop>
+  <tabstop>email</tabstop>
+  <tabstop>id_type</tabstop>
+  <tabstop>id_serial</tabstop>
+  <tabstop>comments</tabstop>
+  <tabstop>saveNewCustomer</tabstop>
+  <tabstop>cancelAddNewCustomertn</tabstop>
+ </tabstops>
  <resources>
   <include location="bill_master_resources.qrc"/>
  </resources>
