--- a/createbooking.ui
+++ b/createbooking.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>988</width>
-    <height>537</height>
+    <width>1215</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,6 +26,12 @@
       <layout class="QVBoxLayout" name="verticalLayout_10">
        <item>
         <widget class="QGroupBox" name="groupBox_4">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="font">
           <font>
            <weight>75</weight>
@@ -41,6 +47,46 @@ background:#f2fee3;
           <string>Booking Details</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <layout class="QGridLayout" name="gridLayout_11">
+            <item row="0" column="1">
+             <widget class="QDateEdit" name="bookingDate">
+              <property name="alignment">
+               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+              </property>
+              <property name="buttonSymbols">
+               <enum>QAbstractSpinBox::NoButtons</enum>
+              </property>
+              <property name="displayFormat">
+               <string>M/d/yyyy</string>
+              </property>
+              <property name="calendarPopup">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Booking Date</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <spacer name="horizontalSpacer_8">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
           <item>
            <layout class="QGridLayout" name="gridLayout_10">
             <item row="0" column="0">
@@ -256,6 +302,16 @@ background:#f2fee3;
                <bool>true</bool>
               </property>
              </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_4">
+              <property name="text">
+               <string>GSTIN</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="gst_no"/>
             </item>
            </layout>
           </item>
@@ -577,7 +633,7 @@ background:#f2fee3;
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>80</height>
+                <height>150</height>
                </size>
               </property>
               <property name="styleSheet">
@@ -629,6 +685,16 @@ background:#f2fee3;
             <column>
              <property name="text">
               <string>To Date</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>cGST</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>sGST</string>
              </property>
             </column>
             <column>
